--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,3 +22,16 @@ ul li{
   margin-right: 10px;
   font-weight: bold;
 }
+
+.image{
+  width: 100%; 
+  height: 300px; 
+  overflow: hidden;
+
+  img{
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    object-position: top center; 
+  }
+}
