--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -59,3 +59,44 @@ ul li{
 .title-movie{
   font-size: small;
 }
+
+//BOTTONE LEAD MORE
+.btn-more{
+  padding:3px 52px;
+  font-size: 15px;
+  border-radius: 0;
+}
+
+
+//ICONE PRIMA DEL FOOTER
+.img-icon-digital {
+  height: 50px;
+  width: 40px;
+}
+
+.img-icon-merchandise{
+  height: 50px;
+  width: 45px;
+}
+
+.img-icon-subscription{
+  height: 50px;
+  width: 50px;
+}
+
+.img-icon-location{
+  height: 40px;
+  width: 30px
+}
+
+.img-icon-power{
+  height: 44px;
+  width: 40px
+}
+
+.p-icon{
+  font-size: 10px;
+  color: white;
+  margin-bottom:0px;
+  padding-left: 10px ;
+}
