--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,7 @@ ul {
   height: 100%;
   margin-bottom: 0px;
   flex-wrap: wrap;
+  padding-left: 0px;
 }
 
 ul li{
@@ -26,6 +27,10 @@ ul li{
   list-style: none;
   margin-right: 10px;
   font-weight: bold;
+
+  a{
+    text-decoration:  none;
+  }
 }
 
 //JUMBOTRON
@@ -99,4 +104,21 @@ ul li{
   color: white;
   margin-bottom:0px;
   padding-left: 10px ;
+}
+
+//FOOTER
+footer{
+  background-image: url('../img/footer-bg.jpg');
+  height: 500px;
+
+  ul{
+    display: block;
+    margin-bottom: 20px;
+  }
+
+  ul li{
+  text-decoration: none;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  list-style: none;
+  }
 }
