add footer final part

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -109,7 +109,8 @@ ul li{
 //FOOTER
 footer{
   background-image: url('../img/footer-bg.jpg');
-  height: 500px;
+  height: 440px;
+  position: relative;
 
   ul{
     display: block;
@@ -124,9 +125,26 @@ footer{
 }
 
 .div-image-footer{
-
   img{
     position:absolute;
     top:-98px
+  }
+}
+
+.btn-sign{
+  border:2px solid rgb(39, 118, 255);
+  border-radius: 0px;
+  color:white
+}
+
+.icon-footer{
+  height: 90px;
+  background-color: rgb(45, 43, 43);
+  position: absolute;
+  bottom: -30px;
+  width: 100%;
+  
+  a{
+    margin-left: 10px
   }
 }
